force-app/main/default/objects/Consent__c/fields/Consent_Attached__c.field-meta.xml
<CustomField>
    <fullName>Consent_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Attached</label>
    <type>Checkbox</type>
</CustomField>