force-app/main/default/objects/Consent__c/fields/Consent_Name__c.field-meta.xml
<CustomField>
    <fullName>Consent_Name__c</fullName>
    <formula>Patient_Donor__r.LastName&amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp; Consent_Type_as_Text__c&amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp; Cycle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Name</label>
    <type>Text</type>
</CustomField>