force-app/main/default/objects/Consent__c/fields/Consent_Sent_Through_Titan__c.field-meta.xml
<CustomField>
    <fullName>Consent_Sent_Through_Titan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Sent Through Titan</label>
    <type>Checkbox</type>
</CustomField>