force-app/main/default/objects/Consent__c/fields/Consent_Signed__c.field-meta.xml
<CustomField>
    <fullName>Consent_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Signed</label>
    <type>Checkbox</type>
</CustomField>