force-app/main/default/objects/Consent__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Consents</fullName>
                <label>Principal Consent</label>
            </value>
            <value>
                <fullName>Cycle Consent</fullName>
                <label>Cycle/Operative Consent</label>
            </value>
            <value>
                <fullName>Disposal Consent</fullName>
                <label>Counsellor&apos;s Report (Manual Upload)</label>
            </value>
            <value>
                <fullName>Financial Consent</fullName>
            </value>
            <value>
                <fullName>Registration Form</fullName>
            </value>
            <value>
                <fullName>GENdoc1 Informed consent process</fullName>
            </value>
            <value>
                <fullName>GENdoc1 - Patient Acknowledgement of Receipt of Information Pertaining to Fertilisation In Vitro and Embryo Transfer - (annually)</fullName>
            </value>
            <value>
                <fullName>GENdoc2 -ART Assisted Reproductive Technology Procedures - (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc3 - Consent to Freeze and Store Embryos - (Annually)</fullName>
            </value>
            <value>
                <fullName>GENdoc4 - Consent to Thaw and Transfer Frozen Embryos - (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc5 - Consent to Freeze and Store Sperm/Testicular Tissue - (Annually)</fullName>
            </value>
            <value>
                <fullName>GENdoc5B - Consent to Freeze Sperm for Donation - (Once - unless they’re donating to a new recipient)</fullName>
            </value>
            <value>
                <fullName>GENdoc5c - Consent to Ongoing Storage of Known Donated Sperm - (Once)</fullName>
            </value>
            <value>
                <fullName>GENdoc6 - Consent to Freeze and Store Oocytes / Ovarian Tissue - (Annually)</fullName>
            </value>
            <value>
                <fullName>GENdoc16 - Consent for Superovulation Therapy - (Annually)</fullName>
            </value>
            <value>
                <fullName>GENdoc17 - Consent for IUI - (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc18 - Witnessing Consent to Semen Preparation for IUI Procedure - (Once)</fullName>
            </value>
            <value>
                <fullName>GENdoc19 - Lifestyle Declaration for Egg Sperm and Embryo Donors - (Annually - unless they’re donating to a new recipient)</fullName>
            </value>
            <value>
                <fullName>GENdoc20 - Consent to Donated Eggs - (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc21 - Consent to Donate Sperm - (Once - unless they’re donating to a new recipient)</fullName>
            </value>
            <value>
                <fullName>GENdoc22 - Consent to Donate Embryos - (Once - unless they’re donating to a new recipient)</fullName>
            </value>
            <value>
                <fullName>GENdoc23 - Consent to Receive Donor Eggs - (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc24 - Consent to Receive Donor Sperm - (Annually if anonymous donor/once if known)</fullName>
            </value>
            <value>
                <fullName>GENdoc26 - Consent to Receive Donor Embryos - (Once – unless donor changes)</fullName>
            </value>
            <value>
                <fullName>GENdoc27 - Donor Medical Condition Declaration - (Once, only if there is a risk declared)</fullName>
            </value>
            <value>
                <fullName>GENdoc40 - TESA/PESA Consent - (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc57b - Consent to Embryo Biopsy &amp; PGT-A for Aneuploidy - (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc58b - Consent to Embryo Biopsey &amp;PGT for Chromosome Rearrangements &amp; Aneuploidy – (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc63B - Consent to Embryo Biopsey &amp;PGT A for Aneuploidy &amp; Sex Selection – (120 days)</fullName>
            </value>
            <value>
                <fullName>GENdoc66b - Consent to Embryo Biopsey &amp;PGT for single Gene Disorders &amp; Aneuploidy - (120 days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>