force-app/main/default/objects/Consent__c/fields/Consent_Type_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type_as_Text__c</fullName>
    <formula>TEXT(Consent_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Type as Text</label>
    <type>Text</type>
</CustomField>