force-app/main/default/objects/Consent__c/fields/Counsellor_Address__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Address__c</fullName>
    <formula>Counsellor_Lookup__r.MailingStreet&amp;&quot; &quot;&amp; Counsellor_Lookup__r.MailingCity&amp;&quot;,&quot;&amp;&quot; &quot;&amp; Counsellor_Lookup__r.MailingState&amp;&quot; &quot;&amp; Counsellor_Lookup__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counsellor Address</label>
    <type>Text</type>
</CustomField>