force-app/main/default/objects/Consent__c/fields/Counsellor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counsellor Look-up</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0125g000000affYAAQ</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>External_Contacts</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consents (Counsellor Look-up)</relationshipLabel>
    <relationshipName>Consents1</relationshipName>
    <type>Lookup</type>
</CustomField>