force-app/main/default/objects/Consent__c/fields/Counsellor_Name__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Name__c</fullName>
    <formula>Counsellor_Lookup__r.FirstName&amp;&quot; &quot;&amp; Counsellor_Lookup__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counsellor Name</label>
    <type>Text</type>
</CustomField>