force-app/main/default/objects/Consent__c/fields/Counsellor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Phone__c</fullName>
    <formula>Counsellor_Lookup__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counsellor Phone</label>
    <type>Text</type>
</CustomField>