force-app/main/default/objects/Consent__c/fields/Count_of_Embryos__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Embryos__c</fullName>
    <inlineHelpText>This data is required for consents; 10.13 - Thawing of Embryos &amp; 10.9 Withdrawing Consent to Donate Embryos or Sperm &amp; CF FLAB17 Embryo Disposal Consent. Please enter the desired value before sending to the patient (or this field will be blank).</inlineHelpText>
    <label>Count of Embryos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>