force-app/main/default/objects/Consent__c/fields/Count_of_Follicles__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Follicles__c</fullName>
    <inlineHelpText>This data is required for consent; 3.5 - More Than 1 Lead Follicle Consent. Please enter the desired value before sending to the patient (or this field will be blank).</inlineHelpText>
    <label>Count of Follicles</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>