force-app/main/default/objects/Consent__c/fields/Count_of_Sperm_Vials__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sperm_Vials__c</fullName>
    <description>Field intended for FLAB 17, 62</description>
    <inlineHelpText>Field intended for FLAB 17, 62</inlineHelpText>
    <label>Count of Sperm Vials</label>
    <length>2</length>
    <type>Text</type>
</CustomField>