force-app/main/default/objects/Consent__c/fields/Cycle_ID_for_Consents__c.field-meta.xml
<CustomField>
    <fullName>Cycle_ID_for_Consents__c</fullName>
    <formula>Cycle__r.Cycle_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle ID for Consents</label>
    <type>Text</type>
</CustomField>