force-app/main/default/objects/Consent__c/fields/Cycle_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Name__c</fullName>
    <formula>Cycle__r.Record_Type_Name_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Name</label>
    <type>Text</type>
</CustomField>