force-app/main/default/objects/Consent__c/fields/Cycle_Timing__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Timing__c</fullName>
    <formula>TEXT (Cycle__r.Cycle_Timing__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Timing</label>
    <type>Text</type>
</CustomField>