force-app/main/default/objects/Consent__c/fields/Date_of_Embryo_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Embryo_Freeze__c</fullName>
    <inlineHelpText>This data is required for consents; 10.9 Withdrawing Consent to Donate Embryos or Sperm and CF FLAB17 Embryo Disposal Consent. Please enter the desired value before sending to the patient (or this field will be blank).</inlineHelpText>
    <label>Date of Embryo Freeze</label>
    <type>Date</type>
</CustomField>