force-app/main/default/objects/Consent__c/fields/Date_of_Sperm_Collection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sperm_Collection__c</fullName>
    <inlineHelpText>This data is required for consent; 10.9 Withdrawing Consent to Donate Embryos or Sperm. Please enter the desired value before sending to the patient (or this field will be blank).</inlineHelpText>
    <label>Date of Sperm Collection</label>
    <type>Date</type>
</CustomField>