force-app/main/default/objects/Consent__c/fields/Doctor_Staff_Member_to_Sign_Document__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Staff_Member_to_Sign_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor/Staff Member to Sign Document</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>