force-app/main/default/objects/Consent__c/fields/Donor_Co_ordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Co_ordinator_Name__c</fullName>
    <formula>IF($User.Donor_Co_ordinator__c  = TRUE, $User.FirstName&amp;&quot; &quot;&amp;$User.LastName, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Co-ordinator Name</label>
    <type>Text</type>
</CustomField>