force-app/main/default/objects/Consent__c/fields/Donor_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Code__c</fullName>
    <formula>Patient_Donor__r.Donor_Lab_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Code</label>
    <type>Text</type>
</CustomField>