force-app/main/default/objects/Consent__c/fields/Egg_Freeze_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Egg_Freeze_Section_2__c</fullName>
    <label>Egg Freeze Section 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>