force-app/main/default/objects/Consent__c/fields/Email_of_Created_User__c.field-meta.xml
<CustomField>
    <fullName>Email_of_Created_User__c</fullName>
    <label>Email of Created User</label>
    <type>Email</type>
</CustomField>