force-app/main/default/objects/Consent__c/fields/Emb_Fz_Date_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Emb_Fz_Date_as_Text__c</fullName>
    <formula>RIGHT(&quot;0&quot; &amp; TEXT(DAY(Date_of_Embryo_Freeze__c)), 2) &amp; &quot;/&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(Date_of_Embryo_Freeze__c)), 2) &amp; &quot;/&quot; &amp; TEXT(YEAR(Date_of_Embryo_Freeze__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emb Fz Date as Text</label>
    <type>Text</type>
</CustomField>