force-app/main/default/objects/Consent__c/fields/Embryo_Glue__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Glue__c</fullName>
    <formula>TEXT(Cycle__r.Embryo_Glue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embryo Glue</label>
    <type>Text</type>
</CustomField>