force-app/main/default/objects/Consent__c/fields/FC_Number__c.field-meta.xml
<CustomField>
    <fullName>FC_Number__c</fullName>
    <displayFormat>FC - {0000}</displayFormat>
    <label>FC Number</label>
    <type>AutoNumber</type>
</CustomField>