force-app/main/default/objects/Consent__c/fields/FET_Section_1__c.field-meta.xml
<CustomField>
    <fullName>FET_Section_1__c</fullName>
    <label>FET Section 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>