force-app/main/default/objects/Consent__c/fields/FET_Section_3__c.field-meta.xml
<CustomField>
    <fullName>FET_Section_3__c</fullName>
    <label>FET Section 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>