force-app/main/default/objects/Consent__c/fields/Financial_Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Consent_Type__c</fullName>
    <label>Financial Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OI Cycle</fullName>
            </value>
            <value>
                <fullName>IUI Cycle</fullName>
            </value>
            <value>
                <fullName>FET Cycle</fullName>
            </value>
            <value>
                <fullName>Egg Freeze Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>