force-app/main/default/objects/Consent__c/fields/Insemination_Type__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Type__c</fullName>
    <formula>TEXT(Cycle__r.Insemination_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insemination Type</label>
    <type>Text</type>
</CustomField>