force-app/main/default/objects/Consent__c/fields/Interpreter__c.field-meta.xml
<CustomField>
    <fullName>Interpreter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field applies to Consent 10.17 - Engagement of Healthcare Interpreter. You must first ensure the interpreter has been added to the system as a business contact (with a valid email address attached to it), then search their name here and save this record before generating the consent for it to reach them.</inlineHelpText>
    <label>Interpreter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0125g000000affYAAQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consents (Interpreter Lookup)</relationshipLabel>
    <relationshipName>Consents2</relationshipName>
    <type>Lookup</type>
</CustomField>