force-app/main/default/objects/Consent__c/fields/IUI_Section_1__c.field-meta.xml
<CustomField>
    <fullName>IUI_Section_1__c</fullName>
    <label>IUI Section 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>