force-app/main/default/objects/Consent__c/fields/IUI_Section_3__c.field-meta.xml
<CustomField>
    <fullName>IUI_Section_3__c</fullName>
    <label>IUI Section 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>