force-app/main/default/objects/Consent__c/fields/Number_of_Embryos_for_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Embryos_for_Transfer__c</fullName>
    <formula>Cycle__r.Number_of_Embryos_to_Transfer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Embryos for Transfer</label>
    <type>Text</type>
</CustomField>