force-app/main/default/objects/Consent__c/fields/OI_Section_1__c.field-meta.xml
<CustomField>
    <fullName>OI_Section_1__c</fullName>
    <label>OI Section 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>