force-app/main/default/objects/Consent__c/fields/OI_Section_2__c.field-meta.xml
<CustomField>
    <fullName>OI_Section_2__c</fullName>
    <label>OI Section 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>