force-app/main/default/objects/Consent__c/fields/OI_Secton_4__c.field-meta.xml
<CustomField>
    <fullName>OI_Secton_4__c</fullName>
    <label>OI Secton 4</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>