force-app/main/default/objects/Consent__c/fields/Owner_Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Clinic_Name__c</fullName>
    <formula>IF ( Cycle__c = NULL,  Patient_Donor__r.Account.Household_Clinic__r.Name ,  Cycle__r.Clinic_Cycle_Being_Undertaken_At__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Clinic Name</label>
    <type>Text</type>
</CustomField>