force-app/main/default/objects/Consent__c/fields/Partner_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Address__c</fullName>
    <formula>Patient_Donor__r.Partner__r.MailingStreet&amp;&quot; &quot;&amp;Patient_Donor__r.Partner__r.MailingCity&amp;&quot;,&quot;&amp;&quot; &quot;&amp;Patient_Donor__r.Partner__r.MailingState&amp;&quot; &quot;&amp;Patient_Donor__r.Partner__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Address</label>
    <type>Text</type>
</CustomField>