force-app/main/default/objects/Consent__c/fields/Partner_Display_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Display_ID__c</fullName>
    <formula>Patient_Donor__r.Partner__r.Patient_ID_Display_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Display ID</label>
    <type>Text</type>
</CustomField>