force-app/main/default/objects/Consent__c/fields/Partner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_First_Name__c</fullName>
    <formula>Patient_Donor__r.Partner__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner First Name</label>
    <type>Text</type>
</CustomField>