force-app/main/default/objects/Consent__c/fields/Partner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Full_Name__c</fullName>
    <formula>Patient_Donor__r.Partner__r.FirstName&amp;&quot; &quot;&amp;  Patient_Donor__r.Partner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Full Name</label>
    <type>Text</type>
</CustomField>