force-app/main/default/objects/Consent__c/fields/Partner_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Partner_Mobile__c</fullName>
    <formula>Patient_Donor__r.Partner__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Mobile</label>
    <type>Text</type>
</CustomField>