force-app/main/default/objects/Consent__c/fields/Partner_Surname__c.field-meta.xml
<CustomField>
    <fullName>Partner_Surname__c</fullName>
    <formula>Patient_Donor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Surname</label>
    <type>Text</type>
</CustomField>