force-app/main/default/objects/Consent__c/fields/Patient_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birthdate__c</fullName>
    <formula>Patient_Donor__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Birthdate</label>
    <type>Date</type>
</CustomField>