force-app/main/default/objects/Consent__c/fields/Patient_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Full_Name__c</fullName>
    <formula>Patient_Donor__r.FirstName&amp;&quot; &quot;&amp;Patient_Donor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Full Name</label>
    <type>Text</type>
</CustomField>