force-app/main/default/objects/Consent__c/fields/Patient_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Mailing_Address__c</fullName>
    <formula>Patient_Donor__r.MailingStreet&amp;&quot; &quot;&amp; Patient_Donor__r.MailingCity&amp;&quot;,&quot;&amp;&quot; &quot;&amp; Patient_Donor__r.MailingState&amp;&quot; &quot;&amp; Patient_Donor__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Mailing Address</label>
    <type>Text</type>
</CustomField>