force-app/main/default/objects/Consent__c/fields/Relevant_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Contacts__c</fullName>
    <label>Relevant Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>