force-app/main/default/objects/Consent__c/fields/Sperm_Freeze_Date_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Freeze_Date_as_Text__c</fullName>
    <formula>RIGHT(&quot;0&quot; &amp; TEXT(DAY(Date_of_Sperm_Collection__c)), 2) &amp; &quot;/&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(Date_of_Sperm_Collection__c)), 2) &amp; &quot;/&quot; &amp; TEXT(YEAR(Date_of_Sperm_Collection__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sperm Freeze Date as Text</label>
    <type>Text</type>
</CustomField>