force-app/main/default/objects/Consent__c/fields/Superannuation_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_Quote_Id__c</fullName>
    <displayFormat>SUPER - {0000}</displayFormat>
    <label>Superannuation Quote Id</label>
    <type>AutoNumber</type>
</CustomField>