force-app/main/default/objects/Consent__c/fields/Templated_Text__c.field-meta.xml
<CustomField>
    <fullName>Templated_Text__c</fullName>
    <label>Templated Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>