force-app/main/default/objects/Consent__c/fields/Total_Estimated_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Rebate__c</fullName>
    <label>Total Estimated Rebate</label>
    <summarizedField>Financial_Consent_Service_Item__c.Estimated_Medicare_Rebate__c</summarizedField>
    <summaryForeignKey>Financial_Consent_Service_Item__c.Financial_Consent_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>