force-app/main/default/objects/Consent__c/fields/Total_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_GST__c</fullName>
    <label>Total GST</label>
    <summarizedField>Financial_Consent_Service_Item__c.GST_Amount__c</summarizedField>
    <summaryForeignKey>Financial_Consent_Service_Item__c.Financial_Consent_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>