force-app/main/default/objects/Consent__c/fields/Total_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Total_Out_of_Pocket__c</fullName>
    <label>Total Out of Pocket</label>
    <summarizedField>Financial_Consent_Service_Item__c.Out_of_Pocket__c</summarizedField>
    <summaryForeignKey>Financial_Consent_Service_Item__c.Financial_Consent_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>