force-app/main/default/objects/Consent__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>Financial_Consent_Service_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Financial_Consent_Service_Item__c.Financial_Consent_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>