force-app/main/default/objects/Consent__c/fields/Treating_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Treating_Doctor__c</fullName>
    <formula>Patient_Donor__r.Treating_Doctor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this field is blank, please make sure the patient has a treating Doctor allocated and revisit this page.</inlineHelpText>
    <label>Treating Doctor</label>
    <type>Text</type>
</CustomField>