force-app/main/default/objects/Consent__c/fields/Treating_Dr_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Treating_Dr_Provider_Number__c</fullName>
    <formula>Patient_Donor__r.Treating_Doctor__r.Provider_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treating Dr Provider Number</label>
    <type>Text</type>
</CustomField>