force-app/main/default/objects/Consent__c/fields/Valid_Consent__c.field-meta.xml
<CustomField>
    <fullName>Valid_Consent__c</fullName>
    <formula>IF(AND(Expiry_Date__c &gt; TODAY() +30, Consent_Signed__c = TRUE, Consent_Attached__c = TRUE), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will only fill when consent signed and consent attached are ticked and validated.</inlineHelpText>
    <label>Valid Consent</label>
    <type>Checkbox</type>
</CustomField>