force-app/main/default/objects/Consent__c/recordTypes/Cycle_Consent.recordType-meta.xml
<RecordType>
    <fullName>Cycle_Consent</fullName>
    <active>true</active>
    <label>Cycle Consent</label>
</RecordType>